attempt to fix scroll issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -542,6 +542,13 @@ template {
     display: none;
 }
 
+html {
+    overflow: hidden;
+}
+body {
+    overflow-y: scroll;
+    -webkit-overflow-scrolling:touch;
+}
 
 /*******MAIN CSS*******/
 
